# warehouse-quad

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  package.xml
controller/: CMakeLists.txt  package.xml
controller/src/: .controller.cpp.swo  .controller.cpp.swp  controller.cpp
hemd/: CMakeLists.txt
hemd/include/: kalman.h  marker.h
hemd/launch/: zestimator.launch
hemd/src/: ekf.cpp  main.cpp  marker.cpp
include/: kalman.h  marker.h  sonar.h
launch/: zestimator.launch
linedetector/: CMakeLists.txt  package.xml
linedetector/include/warehouse_quad/: CVInclude.h
pca-linedetector/: CMakeLists.txt  package.xml
pca-linedetector/src/linedetector/: linedetector_node.py
pca-linedetector/src/pca-linedetector/: CMakeLists.txt  pcadetector_node.cxx
pca_linedetector/: CMakeLists.txt  package.xml
pca_linedetector/src/: line.cpp  line.h  line_detector.cpp  line_detector.h  pca.cpp  pca.h  pcadetector_node.cxx
pca_linedetector/src/pca-linedetector/: pcadetector_node.cxx
src/: ekf.cpp  main.cpp  marker.cpp  sonar.cpp
src/linedetector/: linedetector_node.cxx
src/pca-linedetector/: CMakeLists.txt  pcadetector_node.cxx  slic.cpp  slic.h  test_slic.cpp
src/skulldetector/: .CMakeLists.txt.swp  CMakeLists.txt  SURF_Homography.cpp  SURF_detector.cpp  digittrain.cpp  facedetect  flan.cpp  skulldetector_node.cxx  test.cpp  test1.cpp
src/skulldetector/__MACOSX/: ._multiscale-template-matching
src/skulldetector/__MACOSX/multiscale-template-matching/: ._images  ._imutils.py  ._match.py
vanilla-linedetector/: CMakeLists.txt  package.xml
vanilla-linedetector/src/linedetector/: linedetector_node.cxx
vanilla_linedetector/: CMakeLists.txt  package.xml
vanilla_linedetector/src/linedetector/: CMakeLists.txt
warehouse-quad/: CMakeLists.txt  package.xml
warehouse-quad/include/: kalman.h  marker.h
warehouse-quad/launch/: .zestimator.launch.swp  zestimator.launch
warehouse-quad/msg/: line.msg  markerInfo.msg
warehouse-quad/src/: ekf.cpp  main.cpp  marker.cpp
